Fix clock digits floating out of LCD by using align-items: stretch
The previous invalid `align-items: bottom` was silently ignored by
browsers, falling back to the default `stretch`. The cleanup commit
changed it to `flex-end`, which pushed the clock digits out of their
grid cell. Revert to `stretch` which is the actual intended behavior.

--- a/src/components/LCD/TimeBox/timeBox.module.scss
+++ b/src/components/LCD/TimeBox/timeBox.module.scss
@@ -3,7 +3,7 @@
   grid-column: lcd-right;
   display: flex;
   flex-direction: row;
-  align-items: flex-end;
+  align-items: stretch;
   justify-content: space-between;
 }
 
